[tool.poetry]
name = "pmedianproblem"
version = "0.1.0"
description = ""
authors = ["Ivan Vasilev <ivan.vasilev.cn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.8"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
